# filament

./: CMakeLists.txt
filament/include/filament/: View.h
libs/gltfio/: CMakeLists.txt
libs/gltfio/materials/: ubershader.mat
libs/gltfio/src/: AssetLoader.cpp  UbershaderLoader.cpp
samples/: showcase.cpp
samples/app/: FilamentApp.cpp  FilamentApp.h
